--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
         <nav>
             <button>Home</button>
             <button>Menu</button>
-            <button>About</button>
+            <button>Contact</button>
         </nav>
     </header>
     <div id="content">
+        <!--
         <h1 class="name"> Trallallero Trallalà </h1>
         <div class="headline">
             <p>Fine Cuisine in the Night</p>
@@ -32,6 +33,7 @@
             <p class="wine">Wine from God</p>
             <img src="./images/wine.jpg" alt="wine and cheese on table" class="food-img">
         </div>
+    -->
     </div>
 </body>
 </html>
